--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
     <link rel="stylesheet" type="text/css" href="~/css/datatables.css">
     <link rel="stylesheet" type="text/css" href="~/css/owlcarousel.css">
     <link rel="stylesheet" type="text/css" href="~/css/rating.css">
+    <link rel="stylesheet" type="text/css" href="~/css/jsgrid.css">
     <!-- Plugins css Ends-->
     <!-- Bootstrap css-->
     <link rel="stylesheet" type="text/css" href="~/css/bootstrap.css">
@@ -102,6 +103,7 @@
                                 <li class="dropdown"><a class="nav-link menu-title" asp-controller="Stoklar" asp-action="Stoklar"><span>Ürünler</span></a></li>
                                 <li class="dropdown"><a class="nav-link menu-title" asp-controller="Users" asp-action="Users"><span>Kullanıcılar</span></a></li>
                                 <li class="dropdown"><a class="nav-link menu-title" asp-controller="Users" asp-action="CandidateUsers"><span>Aday Kullanıcılar</span></a></li>
+                                <li class="dropdown"><a class="nav-link menu-title" asp-controller="Order" asp-action="Orders"><span>Siparişler</span></a></li>
 
                             </ul>
                         </div>
@@ -140,12 +142,16 @@
     <script src="~/js/bootstrap/popper.min.js"></script>
     <script src="~/js/bootstrap/bootstrap.min.js"></script>
     <!-- Plugins JS start-->
+    <script src="~/js/jsgrid/jsgrid.min.js"></script>
+    <script src="~/js/jsgrid/griddata.js"></script>
+    <script src="~/js/jsgrid/jsgrid.js"></script>
     <script src="~/js/prism/prism.min.js"></script>
     <script src="~/js/clipboard/clipboard.min.js"></script>
     <script src="~/js/custom-card/custom-card.js"></script>
     <script src="~/js/tooltip-init.js"></script>
     <!-- Plugins JS Ends-->
     <!-- Theme js-->
+   
     <script src="~/js/script.js"></script>
     <script src="~/js/datatable/datatables/jquery.dataTables.min.js"></script>
     <script src="~/js/rating/jquery.barrating.js"></script>
