--- a/Views/Order/Orders.cshtml
+++ b/Views/Order/Orders.cshtml
@@ -13,7 +13,7 @@
                     <h5>Siparişler</h5>
                 </div>
                 <div class="card-header pb-0 text-right">
-                    <a class="btn btn-primary" asp-controller="Order" asp-action="CreateOrder"><span>Teklif Oluştur</span></a>
+                    <a class="btn btn-primary" asp-controller="Order" asp-action="CreateOrder"><span>Sipariş Oluştur</span></a>
 
                 </div>
                 <div class="card-body">
