--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <meta name="description" content="viho admin is super flexible, powerful, clean &amp; modern responsive bootstrap 4 admin template with unlimited possibilities.">
     <meta name="keywords" content="admin template, viho admin template, dashboard template, flat admin template, responsive admin template, web app">
     <meta name="author" content="pixelstrap">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="icon" href="~/images/favicon.png" type="image/x-icon">
     <link rel="shortcut icon" href="~/images/favicon.png" type="image/x-icon">
     <title>viho - Premium Admin Template</title>
@@ -159,6 +160,9 @@
     <script src="~/js/owlcarousel/owl.carousel.js"></script>
     <script src="~/js/ecommerce.js"></script>
     <script src="~/js/product-list-custom.js"></script>
+    <script src="~/js/Global.js"></script>
+    <script src="~/js/forCreateOrder/formOperations.js"></script>
+
     <!-- login js-->
     <!-- Plugin used-->
    
