--- a/Views/Musteri/MusteriList.cshtml
+++ b/Views/Musteri/MusteriList.cshtml
@@ -26,7 +26,7 @@
                     @foreach (var musteri in Model.Musteriler)
                     {
                         <tr>
-                            <th>@musteri["Sira"]</th>
+                            <td>@musteri["Sira"]</td>
                             <td>@musteri["cari_kod"]</td>
                             <td>@musteri["cari_unvan1"]</td>
                             <td>@musteri["cari_EMail"]</td>
