--- a/Views/Order/Orders.cshtml
+++ b/Views/Order/Orders.cshtml
@@ -25,6 +25,7 @@
                                     <th>Sipariş Tarihi</th>
                                     <th>Teslim Tarihi</th>
                                     <th>Sipariş Tutarı</th>
+                                    <th>Düzenle</th>
                                
                                 </tr>
                             </thead>
@@ -40,36 +41,8 @@
                                             <td>@Cari["KTRH"]</td>
                                             <td>@Cari["TESTRH"]</td>
                                             <td>@Cari["SIPTUTAR"]</td>
-
-
-                                            @*  <td>
-                                    @if (User.IsPasivve == false)
-                                    {
-                                    <span class="badge bg-success text-white">Aktif</span>
-                                    }
-                                    else if (User.IsPasivve == true)
-                                    {
-                                    <span class="badge bg-danger text-white">Pasif</span>
-                                    }
-                                    </td>
-                                    <td>
-                                    @if (User.IsPasivve == false)
-                                    {
-                                    <form method="post" asp-controller="Users" asp-action="UserStatuUpdate">
-                                    <input type="hidden" name="userId" value="@User.UserId" />
-                                    <button type="submit" class="btn btn-danger btn-xs">Pasif Yap</button>
-                                    </form>
-                                    }
-                                    else if (User.IsPasivve == true)
-                                    {
-                                    <form method="post" asp-controller="Users" asp-action="UserStatuUpdate">
-                                    <input type="hidden" name="userId" value="@User.UserId" />
-                                    <button type="submit" class="btn btn-primary btn-xs">Aktif Yap</button>
-                                    </form>
-                                    }
-                                    </td> *@
                                             <td>
-                                                <a @* href="/Users/UpdateUser/@User.UserId" *@><li data-feather="edit"></li></a>
+                                                <a href="/Order/EditOrder/@Cari["SipSira"]"><li data-feather="edit"></li></a>
                                             <td>
                                         </tr>
                                     }
