--- a/Views/Order/EditOrder.cshtml
+++ b/Views/Order/EditOrder.cshtml
@@ -102,7 +102,7 @@
 </div>
 DOMContentLoaded
 <script>
-    // Sayfa yüklendiğinde çalışacak olan fonksiyon
+    // Sayfa yüklendiğinde çalışacak olan fonksiyon aaa
     window.onload = function () {
         // AJAX isteği gönderme
         var xhr = new XMLHttpRequest();
